Create the form and set the data

--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,15 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
         <pre id="myData"></pre>
+
+        <div>
+            <label>¿Cómo te llamas?</label>
+            <input type="text" id="quien" />
+            <label> ¿Como calificas este meetup?</label>
+            <input type="number" id="cuanto" min="1" max="10" value="1" />
+            <button id="enviar">Enviar</button>
+        </div>
+
         <script src="app.js"></script>
     </body>
 </html>
