--- a/public/index.html
+++ b/public/index.html
@@ -2,34 +2,62 @@
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <script src="https://www.gstatic.com/firebasejs/3.6.0/firebase.js"></script>
-        <!-- Latest compiled and minified CSS -->
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    </head>
-    <body>
-        <!--[if lt IE 7]>
+<!--[if gt IE 8]><!-->
+<html class="no-js">
+<!--<![endif]-->
+
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title></title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="https://www.gstatic.com/firebasejs/3.6.0/firebase.js"></script>
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+        crossorigin="anonymous">
+</head>
+
+<body>
+    <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-        <!--<pre id="myData"></pre>-->
-
+    <!--<pre id="myData"></pre>-->
+    <div class="col-sm-offset-3 col-sm-6">
         <div class="alert alert-success" role="alert" id="alert">
         </div>
+    </div>
 
-        <div>
-            <label>¿Cómo te llamas?</label>
-            <input type="text" id="quien" />
-            <label> ¿Como calificas este meetup?</label>
-            <input type="number" id="cuanto" min="1" max="10" value="1" />
-            <button id="enviar">Enviar</button>
+    <div class="panel panel-default">
+        <div class="panel-heading">
+            <h3 class="panel-title">Danos tu opinión sobre este meetup:</h3>
         </div>
+        <div class="panel-body">
+            <div class="form-horizontal">
+                <div class="form-group">
+                    <label class="control-label col-sm-3">¿Cómo te llamas?</label>
+                    <div class="col-sm-5">
+                        <input class="form-control" type="text" id="quien" />
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label class="control-label col-sm-3"> ¿Como calificas este meetup?</label>
+                    <div class="col-sm-5">
+                        <input class="form-control" type="number" id="cuanto" min="1" max="10" value="1" />
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="col-sm-offset-3 col-sm-5">
+                        <button type="submit" class="btn btn-default" id="enviar">Enviar</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
-        <script src="app.js"></script>
-    </body>
+
+
+    <script src="app.js"></script>
+</body>
+
 </html>
