--- a/public/index.html
+++ b/public/index.html
@@ -53,6 +53,9 @@
                 </div>
             </div>
         </div>
+        <div class="panel-footer" id="total">
+            
+        </div>
     </div>
 
 
