--- a/public/index.html
+++ b/public/index.html
@@ -51,8 +51,14 @@
                         <button type="submit" class="btn btn-default" id="enviar">Enviar</button>
                     </div>
                 </div>
+                <div class="form-group">
+                    <div class="col-sm-offset-3 col-sm-5">
+                        <button type="submit" class="btn btn-danger" id="login"> <strong>G</strong> | Login</button>
+                    </div>
+                </div>
             </div>
         </div>
+        
         <div class="panel-footer" id="total">
             
         </div>
