Implementando un login simple con Google y mostrando la información del usuario

--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,6 @@
         <div class="alert alert-success" role="alert" id="alert">
         </div>
     </div>
-
     <div class="panel panel-default">
         <div class="panel-heading">
             <h3 class="panel-title">Danos tu opinión sobre este meetup:</h3>
@@ -56,6 +55,7 @@
                         <button type="submit" class="btn btn-danger" id="login"> <strong>G</strong> | Login</button>
                     </div>
                 </div>
+                <div id="user-info"></div>
             </div>
         </div>
         
